@@ -17,6 +17,7 @@ documents those changes that are of interest to users and administrators.
  -- Change --workdir in sbatch to be --chdir as in all other commands (salloc,
     srun).
  -- Add WorkDir to the job record in the database.
+ -- Make the UsageFactor of a QOS work when a qos has the nodecay flag.
 
 * Changes in Slurm 17.11.0pre2
 ==============================
